# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.276 2012/11/10 01:18:34 vapier Exp $

*timezone-data-2012i (10 Nov 2012)

  10 Nov 2012; Mike Frysinger <vapier@gentoo.org>
  +files/timezone-data-2012i-makefile.patch, +timezone-data-2012i.ebuild:
  Version bump.

*timezone-data-2012h (27 Oct 2012)

  27 Oct 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012h.ebuild:
  Version bump.

*timezone-data-2012g (18 Oct 2012)

  18 Oct 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012g.ebuild:
  Version bump.

  18 Oct 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012f.ebuild:
  Stabilize for everyone.

*timezone-data-2012f (13 Sep 2012)

  13 Sep 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012f.ebuild:
  Version bump.

*timezone-data-2012e (03 Aug 2012)

  03 Aug 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012e.ebuild:
  Version bump.

*timezone-data-2012d (20 Jul 2012)

  20 Jul 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012d.ebuild:
  Version bump.

  16 May 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012c.ebuild:
  Update HOMEPAGE/SRC_URI to include new IANA site #416311 by Larry Gilbert.

  27 Apr 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012c.ebuild:
  Stabilize for everyone.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> timezone-data-2012c.ebuild:
  keyword ~amd64-fbsd

*timezone-data-2012c (02 Apr 2012)

  02 Apr 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012c.ebuild:
  Version bump.

*timezone-data-2012b (02 Mar 2012)

  02 Mar 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012b.ebuild:
  Version bump.

*timezone-data-2012a (01 Mar 2012)

  01 Mar 2012; Mike Frysinger <vapier@gentoo.org> -timezone-data-2011d.ebuild,
  -timezone-data-2011e.ebuild, -timezone-data-2011g.ebuild,