@@ -8,22 +8,25 @@ DIST tzcode2012e.tar.gz 135542 SHA256 bf0cb79e8419952ff4c6070394f6d45e809e3543b4
 DIST tzcode2012f.tar.gz 135543 SHA256 f38a096ee1f6c6752946463fdeecf1f0bba422a3e5bdb2eff672d601407ad9d4 SHA512 65ee827e44fd2eb87237d9f83e66a5eb075d4af3635012753ffe952d52fa364c32743e4791a79394c08bd37a1561d9436b3d9f6cb316a4f998e7aafbb4fff06a WHIRLPOOL 61eeae5492a737d28f62e84e64372b65695d17de162a256a12381854e2e5db3ac714f9ccc5acd7f43c70a55edb07444419831e172f92d19f41238367e70d5ff8
 DIST tzcode2012g.tar.gz 134831 SHA256 416f9ddc4015b4b69c4bc621fd81f87b6f30ade5bb0fda8d311fb2a74f1b49fc SHA512 22d6f6060cc82359d00e04d322049d286d6d78e26fc22697de9afb8d959166dbb4334d419b8aa90b00a9744c08206862cd49acbe9742d2f3b35a84892ec010e1 WHIRLPOOL ece7a5d5c5d5b837c3ed507e9ddbeb52c6bee58b82724389ebed8b08d632b471885d5a2d547d9c527757c026c3b2f714c9e26dc3688015c3b8b9ee2aaea9bb83
 DIST tzcode2012i.tar.gz 135435 SHA256 ae658de3d2d3332401f599e1cedb109fbf3dac05d8becdc09f7524dbf0cda162 SHA512 7c5f3a9327abc62f561dbe6bd6e4e8a8c395cffde51db41a56be908e27a29a5e557af85ca2ce2592aa1858850000c850cdcf0e25d839283498687e867f192bc0 WHIRLPOOL 9d08cb2674dbe89c0290a74d997f569b67213e3cf7037dd91ed25f3c34f174e0a868cb841a30c96a50067ff3a56c91f15ff0422c66b061e737a8589a16f0df6a
+DIST tzcode2012j.tar.gz 134654 SHA256 ee4361b3b4ae201a270857c84d0f063c2a2191b3e4cd7414ea4622bb8bae9a82 SHA512 a0182438fedb1d855b52c0734f52bfd4dd3707d65c6f347833d5a68aab132a68f2b77a0e182d7ecfe7c58185245d7181ab01da909c2fdc84b71150c3090382c2 WHIRLPOOL 430e7320976e184753364d034f16109713a350ec0828d864be2f30ce6d29dd403d8f9c25866f828c664f0324f57ad72197fd752ba343f316d80d7c11a1ebdee6
 DIST tzdata2012c.tar.gz 206206 SHA256 33e19e1dd27bda5239812587d72971509a15b59baff7abd692b77ff66f168a82 SHA512 c43630f0bf1973b368229c788da90965d7c8b0d6dc8aa0f4bcbfac018a8c8291e1eb21cae05282df2eba6ec9a647c53c02fd92fea91fd5cb93855808387e52b9 WHIRLPOOL 119d8076a88287eb5063bd977aa63eaf918310e33b1d1f4fc60ad9ad72ed9b1d62918345e6f5786ca0ce6d5b938db1e33d05c0bdfdf70d1bd22a10ee825cf99d
 DIST tzdata2012e.tar.gz 206251 SHA256 061c1c289e792f3661135d5ec542e4f9417d3cd7f232f3d54c1949573aadd0fc SHA512 66ab7bcf7070a0a6d9ba2c5ef9d5c0f0992462fa43a09998a36c9a64049b10164fb6bf73d66ab5d2fbb90e07aa5e4e636221266a69b7590eccfcd6b1acffbd98 WHIRLPOOL 7f049e8012b50fee0818c00a50fa9e342afeda0cf6261d757c998b4d926490f6d766c7e755b7a6b46e0708fe60077afcafc3ca52d6e6b69a4b90e62ce6f934e0
 DIST tzdata2012f.tar.gz 206404 SHA256 afe95a49a445ee55391d2d4beccd4be6d61a090d5d8069c407390ff1502c26cc SHA512 b8db53f82967472c3aa191a04f0a97473d4331c72d03834749a0c8a9d9a934fb1285917e3f5b6fc7a166a39371913650501feb88ebfc40bc6a64e3393d0ead5d WHIRLPOOL 9239778259ba75002fd5e0fd4c16cf94e9b57f746f9267c054fea0fbe23b9890387ffb835579c8674ef85516f6deef75ef62b1e28d620504d866569bdf5e3dcb
 DIST tzdata2012g.tar.gz 213055 SHA256 9a82e74f798d69c18b48e0128c46b6ea10132d9495cbcc4105e7483150a85bac SHA512 1f13a1024d4e8cbdf06387ad151e179cbecb0b95f7df7edbc00fd45e2b76277aa4dc907f50a0a1b75382df065c8a4c0028fdb278d2f8ebc54eff09e228cd7a94 WHIRLPOOL ec722eca702a03563e0c7ed3c45c9706373a61839708d582c732d227f1a95e1dfaa5d1bbdf7a711e238ad35c85d2dffc5010b1c6225666ae61e78fefc57b48c9
 DIST tzdata2012i.tar.gz 213961 SHA256 c9e5b6b6a2031236126409b3595cd8e1a730febc1e8b3802fdbdb417977cf162 SHA512 e20fb9093c23e2a40eb1110b3a29fa25bc870b54ceae5bc253d9fd1b0fe8446bde7d28bc30f7ea6f9a3fc5e8eadc9efbbb7851c2f70e226af28d3934920f7fb7 WHIRLPOOL 08083f06621d66782adae05b208fee50a8db1b62ddca8e1f7e549e75006bbc34e4386c4f07680f9345092f671900de473ad73d715828bd602fa3f2d86b339581
+DIST tzdata2012j.tar.gz 214075 SHA256 4b6a3c2831bdbb68ab1a1bf906bcf11d18ab78009713a0339da6fe96b6afceaa SHA512 98515b92268a2ee49386f6955211c14b9fe47460ba1c3ec5d60681b1a934688c3de4452f8f757ca3a6924e15784585967c768e7c86be730378d0332c249584fe WHIRLPOOL 17af29d05587bea2b05762751d146101a8bcc647346aa22a33e06a095805ecf4feab62693b3216ba5d75cf87f8a63d8cbcee9167be4b6dfe7936e1828bbc4b8a
 EBUILD timezone-data-2012c.ebuild 3365 SHA256 20e4f128ce5a2855b71557468e30ceba5e69018fca7edc095317e7b76bdc1bdf SHA512 a2acbf7aa15917ab05119c8a6e53b906dee0f4338bf68c5acb3f0126a2a5758b529591dc76d6cf5b947c8a4cd34ec03be107efa60ca3da8bb639b6a7953d8786 WHIRLPOOL 49de347220cf35272e37065d70a8888f85e2764085fb5a92c95c7c9ce4d00f0ea664e9c001c5dd26d4b742dbbe2dfa56ee2c6b23007e452804b15e38a873ea49
 EBUILD timezone-data-2012e.ebuild 3348 SHA256 53aa1e935869feb14a2b521bb81db940d85fadc426c8dd75e160438b74c20f12 SHA512 fde54ccd163047f41c56056666b3a57de9b5bdb6695469ede87c6fda7b2c00648e1fc67bf5c6ada1d054bc79e6a46e26bf62b69d07c9363f198527c25908da86 WHIRLPOOL 6312db2154fd10e37dc43b83d4cda5897ef0241e6fcd555b12e1ba5249972212a0344cb528cabfe045a68efc470dd5b84da92da851b0f7147ccb9faeca284c08
 EBUILD timezone-data-2012f.ebuild 3348 SHA256 2968486b08a95e876e7ddcf5ebc62089d5af583c8823a029cfacb50013ad8033 SHA512 e13dc864c4f2bc65b64193fa9985f42b10c614e99adc3f6d17494b28bb67b784cb31a837abde73f822f3d619f3bc3ac948ea1374b24ac3156d3bacce6cae2fb4 WHIRLPOOL aa71afcd8391df6760be2588efe7040ed4990195c4099c0b4d58bcab87cbc0015a90b2c4f393b8ba21943bae81d69309305d00085bc99829ed4346da15c031e5
 EBUILD timezone-data-2012g.ebuild 3348 SHA256 c6cace4ff829522058abbe0774388efdbe767d825342df3dee146fdbc49ad878 SHA512 a2f552fa06211a368e69599b8d5a092efbe0762ed0ec762c7edead278b45d12fb18a536c569502868087ec64f5278bc5567a84fac0ae0995f19f38f6508cf1bb WHIRLPOOL 9287982bf92f10c7e45dcb9a9234ef6e5ffb3b313699f6e6304a2d6aeaf2ab2a944681cb37f1b401f28341befdabaf696d9a3273ffc8f930b9cd33131e99eab9
 EBUILD timezone-data-2012i.ebuild 3293 SHA256 e42f2aeb552d0a9fd5e9d6f8b24ac4f75410693216ba6293c7be138b6eaf4b45 SHA512 e4a2e0befb68f19df9394dcf9e678228d691467d21f1738dda9ebf3a364dcc6f0143b45915cbf2f8f73e42993b79b4f0bfd2d6f88753959b8f981a05f4a55f7d WHIRLPOOL f2d131dd216f737180f739a04fef149d58081adfa044def42b8288357e578126c9d7ecd1af288f3e4c6a199b77e2b658473a3e4629e7f608ccc9e31c5109e364
-MISC ChangeLog 36449 SHA256 7b1fbe8421985daa58d776521bdc1ff4093d39df767e9643b27e65ddcf58d38d SHA512 7de24034d91304be81b2de0f15fcd99aa6be4bf40c3395643d1e99ce5216c0f2c670e6f4a160df30ecb2c78bf391ab7472fbc4a8c294c5c98b9783313e2fe245 WHIRLPOOL 2b7675e333de5001c74f274d8db2dc5635d73f606fedfe73e8f37a542370ceb5eece9a82955db67f664d2e8baa583d54a5c3dfe7cd03cdb18fec6d5e42d7b699
+EBUILD timezone-data-2012j.ebuild 3293 SHA256 1f963b0e1aab5006cc7f1ce2eef1f0f8bf74da833a8dea9f8de6a1f3b592c0b5 SHA512 9a3f787d6cab06da98b44dcd3901a1a01760e1fd3c6f8401a5cbc6cf1d89e1e094b83feba2b95b4fc72880c020def7eee20d88fe063fd9d6d85e3f95423b65d9 WHIRLPOOL 527bf77b4f359697e8c35a8f390b6c18d0f38d574139a7c7b57fe2ffd27df8a625fc676e6ec03095250a900bb97204e8e4a28b6c8eb8c7fe41faece0ceb90c4a
+MISC ChangeLog 36581 SHA256 3881230387ea5712d2a479a883933995a529e9cca7cd80305f424faabcd6fa36 SHA512 99f1ede7681ffe7a428edba6cd847f561412499d405b8bff6017b722f89d63445565f8cc1ab9e3d343095719ea495e5e90778bfaabcb7a7bdb3840c621bd0f18 WHIRLPOOL 2ece57ed644cd54146ffa909e97446ed42dd249aa7b6a43a0c45feeb819368f7a46b43f14569350752784d70ffbff3ed004a9e5ed7ea2480d768c0367ab44358
 MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEAREIAAYFAlCh+yMACgkQX3X2B8XHTon7/wCfV5SCDVz5tziGQrdN3UhhObGS
-NtIAniwHDbg/brDPP5nGa+W7NqE1OEcA
-=PwSm
+iEYEAREIAAYFAlDVzM4ACgkQX3X2B8XHTonHPQCgpQqX2oTcLvNL+Pm9X13olOVR
+h0YAn1nWzSFOyNC3C7Te8+FKEHc9hz8r
+=+Pff
 -----END PGP SIGNATURE-----
