@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.276 2012/11/10 01:18:34 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.277 2012/11/13 05:52:46 vapier Exp $
+
+*timezone-data-2012j (13 Nov 2012)
+
+  13 Nov 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012j.ebuild:
+  Version bump.
 
 *timezone-data-2012i (10 Nov 2012)
 
